added board service tests, fixed bug in board service

--- a/build.gradle
+++ b/build.gradle
@@ -10,10 +10,13 @@ repositories {
     mavenCentral()
 }
 
+def jupiterVersion = '5.8.2'
+
 dependencies {
     implementation group: 'commons-io', name: 'commons-io', version: '2.11.0'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
+    testImplementation "org.junit.jupiter:junit-jupiter-api:${jupiterVersion}"
+    testImplementation "org.junit.jupiter:junit-jupiter-params:${jupiterVersion}"
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${jupiterVersion}"
 }
 
 test {
